--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -12,7 +12,7 @@
 
 /* shared style */
 .bg-color {
-    /* background-color: rgba(77, 71, 255, 0.020); */
+    background-color: rgba(77, 71, 255, 0.030);
 }
 
 .btn-primary {
@@ -62,11 +62,18 @@ nav {
     color: #252432;
 }
 
+/* main styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 /* action styles  */
 .action {
     display: flex;
     justify-content: space-between;
-    margin: 116px 250px 116px 250px;
+    margin-top: 116px;
+    margin-bottom: 116px;
 }
 
 .action-content {
@@ -98,7 +105,7 @@ nav {
     border: none;
     border-radius: 24px;
     padding: 50px 100px 50px 100px;
-    margin: auto;
+    /* margin: auto; */
     max-width: 1140px;
     max-height: 306px;
 
@@ -130,4 +137,92 @@ nav {
     color: rgba(0, 0, 0, 0.5);
     margin-top: 0;
     text-align: center;
+}
+
+/* news styles */
+.news-content {
+    display: flex;
+    max-width: 1140px;
+    max-height: 632px;
+    margin: 70px;
+    /* margin: auto; */
+
+}
+
+.news-title {
+    font-weight: bold;
+    font-size: 112px;
+}
+
+.news-input {
+    margin-bottom: 8px;
+    margin-top: 8px;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+section input[type="email"],
+section input[type="text"],
+section textarea {
+    width: 400px;
+    border: 1px solid #D6DDED;
+    border-radius: 10px;
+    display: block;
+    padding: 20px 30px;
+    margin-bottom: 24px;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.submit {
+    height: 62px;
+    width: 100%;
+    background-color: #4E47FF;
+    font-weight: bold;
+    color: #FFFFFF;
+    padding: 10px 100px;
+    font-size: 16px;
+    border: none;
+    border-radius: 10px;
+}
+
+/* footer */
+footer {
+    background-color: white;
+    height: 428px;
+    justify-content: center;
+    border-top: 1px solid rgba(165, 42, 42, 0.034);
+}
+
+.footer-column {
+    text-align: center;
+    height: 221px;
+    width: 532px;
+    margin: auto;
+}
+
+.footer-title {
+    color: #4E47FF;
+    font-weight: 900;
+    font-size: 100px;
+    margin-bottom: 0;
+}
+
+.footer-para {
+    color: #8987A1;
+}
+
+footer ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+footer ul li {
+    list-style: none;
+}
+
+footer li a {
+    text-decoration: none;
+    color: #8987A1;
 }
