--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -23,6 +23,12 @@
     font-size: 16px;
     border: none;
     border-radius: 10px;
+    cursor: pointer;
+}
+
+.btn-primary:hover,
+.submit-btn:hover {
+    background-color: rgb(0, 0, 139)
 }
 
 /* header */
@@ -139,6 +145,78 @@ main {
     text-align: center;
 }
 
+/* review styles */
+
+.review-wrapper {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.review-content {
+    padding: 20px 20px 0px 20px;
+    background-color: white;
+    border: none;
+    border-radius: 20px;
+    height: 243px;
+}
+
+.review-stars {
+    display: flex;
+    gap: 8px;
+    height: 20px;
+    width: 20px;
+    /* margin-bottom: 12px; */
+}
+
+.user-review {
+    height: 342px;
+}
+
+.review-title {
+    font-size: 50px;
+    font-weight: bold;
+    color: #252432;
+    text-align: center;
+}
+
+.review-description {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.review-type {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.review-img-name {
+    display: flex;
+    margin-top: 16px;
+    gap: 12px;
+    align-items: center;
+}
+
+.review-img {
+    border: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+}
+
+.review-name {
+    color: #71717A;
+    font-weight: 600;
+    margin: 0;
+    padding-bottom: 8px;
+}
+
+.review-date {
+    color: #A0A0A0;
+    font-weight: 400;
+    margin: 0;
+}
+
 /* news styles */
 .news-content {
     display: flex;
@@ -174,7 +252,7 @@ section textarea {
     font-size: 20px;
 }
 
-.submit {
+.submit-btn {
     height: 62px;
     width: 100%;
     background-color: #4E47FF;
@@ -184,6 +262,7 @@ section textarea {
     font-size: 16px;
     border: none;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 /* footer */
@@ -225,4 +304,8 @@ footer ul li {
 footer li a {
     text-decoration: none;
     color: #8987A1;
+}
+
+footer li a:hover {
+    color: black;
 }
